--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prakriti Adhikari - Portfolio</title>
+    <title>Prakriti Adhikari-Portfolio</title>
     <script src="https://cdn.tailwindcss.com"></script>
 
 </head>
@@ -12,16 +12,17 @@
     <header class="text-gray-400 bg-gray-900 body-font">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
           <a class="flex title-font font-medium items-center text-white mb-4 md:mb-0">
-            <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-pink-500 rounded-full" viewBox="0 0 24 24">
+            <svg xmlns="http://www.w3.org/2000/svg" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-10 h-10 text-white p-2 bg-blue-500 rounded-full" viewBox="0 0 24 24">
               <path d="M12 2L2 7l10 5 10-5-10-5zM2 17l10 5 10-5M2 12l10 5 10-5"></path>
             </svg>
             <span class="ml-3 text-xl">Prakriti</span>
           </a>
           <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
-            <a class="mr-5 hover:text-white">First Link</a>
-            <a class="mr-5 hover:text-white">Second Link</a>
-            <a class="mr-5 hover:text-white">Third Link</a>
-            <a class="mr-5 hover:text-white">Fourth Link</a>
+            <a class="mr-5 hover:text-white">About</a>
+            <a class="mr-5 hover:text-white">Education</a>
+            <a class="mr-5 hover:text-white">Skills</a>
+            <a class="mr-5 hover:text-white">Projects</a>
+            <a class="mr-5 hover:text-white">Contact</a>
           </nav>
           <button class="inline-flex items-center bg-gray-800 border-0 py-1 px-3 focus:outline-none hover:bg-gray-700 rounded text-base mt-4 md:mt-0">Button
             <svg fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="w-4 h-4 ml-1" viewBox="0 0 24 24">
@@ -41,12 +42,13 @@
                 Computer Engineering Student at Pokhara Engineering College, Welcome to my portfolio.
             </p>
             <div class="flex justify-center">
-              <button class="inline-flex text-white bg-pink-500 border-0 py-2 px-6 focus:outline-none hover:bg-pink-600 rounded text-lg">Hire Me</button>
+              <button onclick="location.href='mailto:workwithprakritiadhikari@gmail.com?subject=Proposal%20for%20Collaboration&body=Dear%20Prakriti%2C%0A%0AI%20hope%20this%20email%20finds%20you%20well.%20I%20am%20reaching%20out%20to%20express%20my%20interest%20in%20potential%20collaboration%20opportunities%20with%20you.%0A%0AI%20came%20across%20your%20contact%20information%20and%20was%20impressed%20by%20your%20work%20and%20expertise%20in%20the%20field.%20After%20reviewing%20your%20portfolio%2C%20I%20believe%20there%20may%20be%20synergies%20between%20our%20skills%20and%20interests%20that%20could%20lead%20to%20fruitful%20collaboration.%0A%0AI%20am%20particularly%20drawn%20to%20your%20mention%20specific%20aspect%20of%20their%20work%20or%20expertise%2C%20and%20I%20believe%20that%20by%20combining%20our%20strengths%2C%20we%20could%20create%20something%20truly%20impactful.%0A%0AI%20am%20currently%20mention%20your%20current%20profession%20or%20activities%2C%20and%20I%20am%20eager%20to%20explore%20potential%20projects%20or%20partnerships%20that%20align%20with%20my%20skills%20and%20interests.%20I%20am%20confident%20that%20together%2C%20we%20can%20achieve%20great%20results.%0A%0APlease%20let%20me%20know%20if%20you%20would%20be%20interested%20in%20discussing%20this%20further.%20I%20am%20available%20at%20your%20convenience%20for%20a%20call%20or%20meeting%20to%20explore%20potential%20collaboration%20opportunities.%0A%0AThank%20you%20for%20considering%20my%20proposal.%20I%20look%20forward%20to%20the%20possibility%20of%20working%20together.%0A%0ABest%20regards%2C%0AYour%20Name%0AYour%20Contact%20Information';" class="inline-flex text-white bg-blue-500 border-0 py-2 px-6 focus:outline-none hover:bg-blue-600 rounded text-lg">Hire Me</button>
+
               <button class="ml-4 inline-flex text-gray-400 bg-gray-800 border-0 py-2 px-6 focus:outline-none hover:bg-gray-700 hover:text-white rounded text-lg">Download CV</button>
             </div>
           </div>
           <div class="lg:max-w-lg lg:w-full md:w-1/2 w-5/6">
-            <img class="object-cover object-center rounded" alt="hero" src="https://dummyimage.com/720x600">
+            <img class="object-cover object-center rounded-full" alt="Prakriti" src="photo_2024-05-03_23-47-26.jpg">
           </div>
         </div>
       </section>
